--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
+        <div class="winner">
+            <div class="winner__backdrop"></div>
+            <div class="winner__body">
+                <h2>Congratulations!</h2>
+                <section class="score-panel-modal">
+                    <ul class="stars stars-modal">
+                        <li class="star"><i class="fa fa-star"></i></li>
+                        <li class="star"><i class="fa fa-star"></i></li>
+                        <li class="star"><i class="fa fa-star"></i></li>
+                    </ul>
+                </section>
+                <p>You managed to solve the Memory Game in <span id="totalScore"></span> moves.</p>
+                <button type="submit" class="btn--close">Close</button>
+                <button type="submit" class="restart">One more once!</button>
+            </div>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
