--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     </ul>
                 </section>
                 <p>You managed to solve the Memory Game in <span id="totalScore"></span> moves.</p>
-                <button type="submit" class="btn--close">Close</button>
-                <button type="submit" class="restart">One more once!</button>
+                <button class="btn--close">Close</button>
+                <button class="btn--restart restart"><i class="fa fa-repeat"></i></button>
             </div>
         </div>
     </div>
