--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
         	<span class="moves">0</span> Moves
 
+            <span class="timer"></span>
+
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
