--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                         <li class="star"><i class="fa fa-star"></i></li>
                         <li class="star"><i class="fa fa-star"></i></li>
                         <li class="star"><i class="fa fa-star"></i></li>
+                        <li class="star"><i class="fa fa-star"></i></li>
                     </ul>
                 </section>
                 <p>You managed to solve the Memory Game in <span id="totalScore"></span> moves.</p>
