Upate score-panel styles to display flex and column

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">0</span> Moves
+        	<p><span class="moves">0</span> Moves</p>
 
             <span class="timer"></span>
 
