--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Matching Game</title>
+    <title>MiniMEMO</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -13,7 +13,7 @@
 
     <div class="container">
         <header>
-            <h1>Matching Game</h1>
+            <h1>MiniMEMO</h1>
         </header>
 
         <section class="score-panel">
