Update new game title in modal text

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <li class="star"><i class="fa fa-star"></i></li>
                 </ul>
             </section>
-            <p>You managed to solve the Memory Game in <span id="min"></span><span id="sec"></span> and needed <span id="totalScore"></span> moves.</p>
+            <p>You solved the MiniMEMO in <span id="min"></span><span id="sec"></span> and needed <span id="totalScore"></span> moves.</p>
             <button class="btn--close">Close</button>
             <button class="btn--restart restart"><i class="fa fa-repeat"></i></button>
         </div>
